--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"start": "node server/server.js",
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\" "
   },
   "engines": {
-	"node": "10.6.0"
+    "node": "10.6.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "loadash": "^1.0.0",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.6"
   },
